@@ -51,9 +51,10 @@ def main():
 @click.option("--reference-build", "-r", required=True, type=click.Choice(['hg19', 'hg38']), help="Used reference genome (needed for EGFR exon coordinates)")
 @click.option('--spliced-reads-only', "-s", is_flag=True, help="If paired end reads with an insert size longer than 801 bases can be expected, wild-type exon-1 to exon-8 covering reads can can be expected. Enabling this flag only uses spliced reads for vIII determination.")
 @click.option('--read-names', "-n", is_flag=True, help="Report all read-names instead of the read counts.")
+@click.option('--include-interchromosomal', "-i", is_flag=True, help="Include paired-end reads that have an interchromosomal mapped mate (disabled by default).")
 @click.option('--dataset-suffix', "-d", type=(str), default="", help="Adds this suffix to the column names; tabs and newlines not allowed.")
 @click.argument('input_bam', type=click.Path(exists=True),nargs=-1)
-def CLI(reference_build, spliced_reads_only, read_names, input_bam, dataset_suffix):
+def CLI(reference_build, spliced_reads_only, read_names, input_bam, include_interchromosomal, dataset_suffix):
     dataset_suffix = dataset_suffix.replace("\t","").replace("\n","")
     from egfrviiideterminer import egfrviiideterminer
 
@@ -67,9 +68,9 @@ def CLI(reference_build, spliced_reads_only, read_names, input_bam, dataset_suff
     
     for _ in input_bam:
         if not spliced_reads_only:
-            stats = egfrviiideterminer.extract_viii_reads(_, egfrviiideterminer.egfr_exons[reference_build])
+            stats = egfrviiideterminer.extract_viii_reads(_, egfrviiideterminer.egfr_exons[reference_build], include_interchromosomal)
         else:
-            stats = egfrviiideterminer.extract_viii_reads_based_on_sjs(_, egfrviiideterminer.egfr_exons[reference_build])
+            stats = egfrviiideterminer.extract_viii_reads_based_on_sjs(_, egfrviiideterminer.egfr_exons[reference_build], include_interchromosomal)
         
         if read_names:
             for readname in sorted(stats['wt']):
