@@ -1,0 +1,30 @@
+@HD	VN:1.4	SO:coordinate
+@SQ	SN:chrM	LN:16571
+@SQ	SN:chr1	LN:249250621
+@SQ	SN:chr2	LN:243199373
+@SQ	SN:chr3	LN:198022430
+@SQ	SN:chr4	LN:191154276
+@SQ	SN:chr5	LN:180915260
+@SQ	SN:chr6	LN:171115067
+@SQ	SN:chr7	LN:159138663
+@SQ	SN:chr8	LN:146364022
+@SQ	SN:chr9	LN:141213431
+@SQ	SN:chr10	LN:135534747
+@SQ	SN:chr11	LN:135006516
+@SQ	SN:chr12	LN:133851895
+@SQ	SN:chr13	LN:115169878
+@SQ	SN:chr14	LN:107349540
+@SQ	SN:chr15	LN:102531392
+@SQ	SN:chr16	LN:90354753
+@SQ	SN:chr17	LN:81195210
+@SQ	SN:chr18	LN:78077248
+@SQ	SN:chr19	LN:59128983
+@SQ	SN:chr20	LN:63025520
+@SQ	SN:chr21	LN:48129895
+@SQ	SN:chr22	LN:51304566
+@SQ	SN:chrX	LN:155270560
+@SQ	SN:chrY	LN:59373566
+@PG	ID:STAR	PN:STAR	VN:STAR
+@CO	user command line: STAR ...
+NB551148:xx:xxxxxxxxx:x:xxxxx:xxxx:xxxx	129	chr7	55087012	50	47M136464N28M1S	chr10	32322864	0	GCTGGCTGCGCTCTGCCCGGAGAGGCGGGCTCTGGAGGAAAAGAAAGGTAATTATGTGGTGACAGATAACGGCTCT	AA/AA//E/EA6EEE/A/EE/E/E///EE/////EA//EEE/<E/E///E//E/E/E6/AA/AE/EE/E//<<EA/	NH:i:1	NM:i:3	MD:Z:20C3T42C7	RG:Z:1 	XS:A:+
+NB551148:xx:xxxxxxxxx:x:xxxxx:xxxx:xxxx	65	chr10	32322864	50	76M	chr7	55087012	0	GTTGCTGGTTTATCATTGGTAAGAGTAATATCTTTATCCACTGTGAAAGCTTCCAAGTTGGCTTTCTCTTTGTCAA	AAAAA/AE//EAEAAEEE6EE6/E/EEEE6A/EEE6AE/EEA//AAEEE<AEE</AEAEEAAEEEAE/6/EAEE/A	NH:i:1	NM:i:0	MD:Z:76	RG:Z:1 
